Readded capstone 1 with correct image linking

--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@
 }
 
 #landing {
-    background-image: url("/images/bg.png");
+    background-image: url("./images/bg.png");
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
